--- a/docker/database/Dockerfile
+++ b/docker/database/Dockerfile
@@ -2,6 +2,8 @@ FROM mariadb:10.5
 
 ENV MYSQL_ROOT_PASSWORD=rootpassword
 ENV MYSQL_DATABASE=AstroAllies_DB
+ENV MYSQL_USER=user
+ENV MYSQL_PASSWORD=userpassword
 
 RUN apt-get update && apt-get install -y \
     iputils-ping traceroute curl openssh-server && \
