--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: AstroAllies_DB
+      MYSQL_USER: user
+      MYSQL_PASSWORD: userpassword
     volumes:
       - aa_db_data:/var/lib/mysql
     networks:
