aggiunta variabile database ENV PSW_PEPE di 8 char

--- a/docker/database/Dockerfile
+++ b/docker/database/Dockerfile
@@ -4,6 +4,7 @@ ENV MYSQL_ROOT_PASSWORD=rootpassword
 ENV MYSQL_DATABASE=AstroAllies_DB
 ENV MYSQL_USER=user
 ENV MYSQL_PASSWORD=userpassword
+ENV PSW_PEPE=vH@_a26A
 
 RUN apt-get update && apt-get install -y \
     iputils-ping traceroute curl openssh-server && \
