--- a/docker/webserver/AstroAllies/.htaccess
+++ b/docker/webserver/AstroAllies/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine On
 RewriteCond %{HTTPS} off
 RewriteRule ^ https://localhost:8443%{REQUEST_URI} [L,R=301]
+DirectoryIndex pages/index.php pages/index.html
