Primo tentativo di implementazione delle socket

--- a/docker/webserver/Dockerfile
+++ b/docker/webserver/Dockerfile
@@ -3,8 +3,9 @@ FROM php:8.1-apache
 # Abilita i moduli e installa strumenti
 RUN a2enmod ssl rewrite
 RUN apt-get update && apt-get install -y \
-    iputils-ping traceroute curl openssh-server default-mysql-client && \
+    iputils-ping traceroute curl openssh-server default-mysql-client iproute2 && \
     docker-php-ext-install mysqli && \
+	docker-php-ext-install sockets && \
     docker-php-ext-enable mysqli && \
     mkdir /var/run/sshd
 
@@ -24,7 +25,7 @@ RUN a2ensite default-ssl && a2ensite 000-default
 COPY ./AstroAllies /var/www/html/
 
 # Espone porte HTTP, HTTPS e SSH
-EXPOSE 80 443 22
+EXPOSE 80 443 22 9001
 
 CMD ["apache2-foreground"]
 
