--- a/docker/webserver/default-ssl.conf
+++ b/docker/webserver/default-ssl.conf
@@ -7,6 +7,15 @@
         SSLCertificateFile /etc/ssl/certs/apache-selfsigned.crt
         SSLCertificateKeyFile /etc/ssl/certs/apache-selfsigned.key
 
+		SSLProxyEngine on
+		SSLProxyVerify none
+		SSLProxyCheckPeerCN off
+		SSLProxyCheckPeerName off
+		SSLProxyCheckPeerExpire off
+
+		ProxyPass /ws ws://aa_socket:8000/
+		ProxyPassReverse /ws ws://aa_socket:8000/
+
         <FilesMatch "\.php$">
             SetHandler application/x-httpd-php
         </FilesMatch>
