--- a/docker/DB_info.env
+++ b/docker/DB_info.env
@@ -2,4 +2,5 @@ MYSQL_ROOT_PASSWORD=rootpassword
 MYSQL_DATABASE=AstroAllies_DB
 MYSQL_USER=user
 MYSQL_PASSWORD=userpassword
-PSW_PEPE=vH@_a26A
+MYSQL_HOST=aa_db
+PSW_PEPPER=2pVGfj
