--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,11 +7,8 @@ services:
     ports:
       - "3306:3306"
       - "2222:22"
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: AstroAllies_DB
-      MYSQL_USER: user
-      MYSQL_PASSWORD: userpassword
+    env_file:
+      - "DB_info.env"
     command: --event-scheduler=ON
     volumes:
       - aa_db_data:/var/lib/mysql
@@ -25,12 +22,8 @@ services:
       - "8080:80"
       - "8443:443"
       - "2223:22"
-    environment:
-      MYSQL_HOST: aa_db
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: AstroAllies_DB
-      MYSQL_USER: user
-      MYSQL_PASSWORD: userpassword
+    env_file:
+      - "DB_info.env"
     volumes:
       - ./webserver/AstroAllies:/var/www/html
       - ./webserver/certs:/etc/ssl/certs
@@ -46,6 +39,8 @@ services:
       - "8000:8000"
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    env_file:
+      - "DB_info.env"
     volumes:
       - ./socketserver/app:/app
     depends_on:
