--- a/docker/socketserver/Dockerfile
+++ b/docker/socketserver/Dockerfile
@@ -2,6 +2,8 @@ FROM php:8.1-alpine
 
 COPY ./app /app
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN docker-php-ext-install mysqli && \
+    docker-php-ext-enable mysqli 
 
 COPY ./entrypoint.sh /entrypoint.sh
 
